RESOLVED FIXED211228
[SOUP] http/tests/media/video-accept-encoding.html fails
https://bugs.webkit.org/show_bug.cgi?id=211228
Summary [SOUP] http/tests/media/video-accept-encoding.html fails
Philippe Normand
Reported 2020-04-30 05:19:57 PDT
Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: > GET /media/video-accept-encoding.cgi?name=resources/test.mp4&type=video/mp4 HTTP/1.1 Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: > Soup-Debug-Timestamp: 1588247535 Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: > Soup-Debug: SoupSession 1 (0x2046220), SoupMessage 4 (0x2059490), SoupSocket 2 (0x26b09a0) Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: > Host: 127.0.0.1:8000 Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: > Referer: http://127.0.0.1:8000/media/video-accept-encoding.html Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: > Connection: close Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: > Icy-Metadata: 1 Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: > Accept: */* Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: > User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0 Safari/605.1.15 WebKitTestRunnerGTK/605.1.15 Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: > Accept-Encoding: gzip, deflate Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: > Accept-Language: en-US Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: < HTTP/1.1 406 Not Acceptable Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: < Soup-Debug-Timestamp: 1588247535 Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: < Soup-Debug: SoupMessage 4 (0x2059490) Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: < Date: Thu, 30 Apr 2020 11:52:15 GMT Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: < Server: Apache/2.4.37 (Unix) Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: < Connection: close Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: < Transfer-Encoding: chunked Apr 30 12:52:15 ecto-1 WebKitNetworkProcess[1073312]: < I might have a patch...
Attachments
Patch (7.16 KB, patch)
2020-04-30 05:30 PDT, Philippe Normand
cgarcia: review+
Philippe Normand
Comment 1 2020-04-30 05:30:33 PDT
Philippe Normand
Comment 2 2020-04-30 06:38:55 PDT
Radar WebKit Bug Importer
Comment 3 2020-04-30 06:39:19 PDT
Note You need to log in before you can comment on or make changes to this bug.