[SOUP] http/tests/media/video-accept-encoding.html fails https://bugs.webkit.org/show_bug.cgi?id=211228

Reviewed by Carlos Garcia Campos.

Source/WebCore:

The resource requests received by the network process always had
the accept-encoding setting enabled due to lack of IPC
(de)serialization for this boolean.

The patch also enables soup release logging, set WEBKIT_DEBUG=Network=debug.

* platform/network/soup/ResourceRequest.h:
(WebCore::ResourceRequest::encodeWithPlatformData const):
(WebCore::ResourceRequest::decodeWithPlatformData):
* platform/network/soup/SoupNetworkSession.cpp:
(WebCore::soupLogPrinter):
(WebCore::SoupNetworkSession::setupLogger):

Tools:

* Scripts/webkitpy/port/gtk.py:
(GtkPort.setup_environ_for_server):
* Scripts/webkitpy/port/wpe.py:
(WPEPort.setup_environ_for_server):

LayoutTests:

* platform/gtk/TestExpectations: Unflag passing tests.

Canonical link: https://commits.webkit.org/224133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260947 268f45cc-cd09-0410-ab3c-d52691b4dbfc